--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -2,15 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-    <div th:replace="~{fragments/header :: header}"></div>
-    <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Task List</title>
+    <div th:replace="~{fragments/general/header :: header}"></div>
 </head>
 
 <body>
-    <div th:replace ="~{fragments/navbar :: navbar}"></div>
+    <div th:replace ="~{fragments/general/navbar :: navbar}"></div>
+
     <div class="container">
         <div layout:fragment="content"></div>
     </div>
-    <div th:replace="~{fragments/footer :: footer}"></div>
+
+    <div th:replace="~{fragments/general/footer :: footer}"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
