--- a/src/main/resources/templates/fragments/carousel.html
+++ b/src/main/resources/templates/fragments/carousel.html
@@ -3,10 +3,6 @@
 <head>
 </head>
 <body>
-.w-100 {
-width: 100% !important;
-height: 75vh;
-}
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" th:fragment="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -18,21 +14,21 @@ height: 75vh;
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img th:src="@{static/images/self_beach_2.png}" class="d-block w-100" alt="...">
+                <img th:src="@{static/images/self_beach.png}" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img th:src="@{static/images/test.png}" class="d-block w-100" alt="...">
+                <img th:src="@{static/images/self2.jpg}" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://images3.alphacoders.com/133/1333030.png" class="d-block w-100" alt="...">
+                <img th:src="@@{static/images/self_beach.png}" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
