--- a/src/main/resources/templates/fragments/carousel.html
+++ b/src/main/resources/templates/fragments/carousel.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img th:src="@@{static/images/self_beach.png}" class="d-block w-100" alt="...">
+                <img th:src="@{static/images/self_beach.png}" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
