--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,10 +1,19 @@
 .carousel-item {
-    height: 80vh;
-    overflow: hidden;
+  height: 80vh;
+  min-height: 350px;
+  background-size: cover;
 }
 
-.carousel-inner img {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
+.card {
+    border-radius: 8px;
+    transition: transform 0.3s;
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 0%, rgba(221,238,225,1) 100%, rgba(167,212,179,1) 100%);
+}
+.hobbies-header {
+    font-size: 4vh;
+}
+
+.card:hover {
+    transform: scale(1.10);
 }
