Updates homepage and setup for more details

--- a/src/main/resources/templates/fragments/hobbies.html
+++ b/src/main/resources/templates/fragments/hobbies.html
@@ -15,7 +15,7 @@
             <div class="col">
                 <div class="card p-3">
                     <div class="d-flex align-items-center justify-content-center">
-                        <p class="card-text mb-0 me-3">Programming</p>
+                        <p class="card-text mb-0 me-3 hobbies-text">Programming</p>
                         <i class="fa-solid fa-laptop-code" style="color: #1ad5c0;"></i>
                     </div>
                 </div>
