--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -8,7 +8,7 @@
     border-radius: 8px;
     transition: transform 0.3s;
     background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 0%, rgba(221,238,225,1) 100%, rgba(167,212,179,1) 100%);
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(230,230,230,1) 100%);
 }
 .hobbies-header {
     font-size: 4vh;
