--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -8,7 +8,7 @@
 
 <body>
     <section layout:fragment="content" >
-        <div class="modal-body row" th:style="'background: url(/static/images/background_gradient.png)'">
+        <div class="modal-body row" th:style="'background: url(/static/images/background_mountain.avif)'">
             <div class="col-md-6">
                 <div class="row md-6">
                     <div th:replace="~{fragments/jumbotron :: jumbotron}"></div>
