--- a/src/main/resources/templates/fragments/carousel.html
+++ b/src/main/resources/templates/fragments/carousel.html
@@ -9,7 +9,7 @@
                 <img th:src="@{static/images/self_beach.png}" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img th:src="@{static/images/self_burger.png}" class="d-block w-100" alt="...">
+                <img th:src="@{static/images/self_cat.png}" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
                 <img th:src="@{static/images/self_pieter.png}" class="d-block w-100" alt="...">
