--- a/src/main/resources/templates/fragments/jumbotron.html
+++ b/src/main/resources/templates/fragments/jumbotron.html
@@ -6,7 +6,13 @@
 <div class="jumbotron jumbotron-fluid" th:fragment="jumbotron">
     <div class="container">
         <h1 class="display-4">Hey, I'm Phi</h1>
-        <p class="lead">I'm a passionate software engineer with a love for chess and programming. Have a look around :)</p>
+        <p class="lead" th:text=" 'I\'m a ' + ${details.age()} + ' year old software engineer with a love for programming. '
+         + ${details.programmerPeriod().getYears()} + ' years ago, I started
+         on my journey as a programmer. As of today, I\'ve been a professional software engineer for over ' + ${details.professionalProgrammerPeriod().getYears()}
+         + ' years and ' + ${details.professionalProgrammerPeriod().getMonths()} + ' months. Ambition is my drive and I\'m always
+           eager to learn more about my profession. After work or on a weekend day you\'ll find
+         me indulging some of my hobbies listed below.'"> </p>
+
     </div>
 </div>
 </body>
