--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -11,15 +11,21 @@
         <div class="modal-body row" th:style="'background: url(/static/images/background_mountain.avif)'">
             <div class="col-md-6">
                 <div class="row md-6">
-                    <div th:replace="~{fragments/jumbotron :: jumbotron}"></div>
+                    <div th:replace="~{fragments/home-page/jumbotron :: jumbotron}"></div>
                 </div>
                 <div class="row md-6">
-                    <div th:replace="~{fragments/hobbies :: hobbies}"></div>
+                    <div th:replace="~{fragments/home-page/hobbies :: hobbies}"></div>
                 </div>
-
             </div>
             <div class="col-md-6">
-                <div th:replace="~{fragments/carousel :: carousel}"></div>
+                <div th:replace="~{fragments/home-page/carousel :: carousel}"></div>
+            </div>
+
+            <div class="col-md-3">
+                <div th:replace="~{fragments/home-page/certificates :: certificates}"></div>
+            </div>
+            <div class="col-md-9 me-3">
+                <div th:replace="~{fragments/home-page/experience :: experience}"></div>
             </div>
         </div>
     </section>
