--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -4,7 +4,7 @@
   background-size: cover;
 }
 
-.card {
+.hobby-card {
     border-radius: 8px;
     transition: transform 0.3s;
     background: rgb(255,255,255);
@@ -14,6 +14,6 @@
     font-size: 4vh;
 }
 
-.card:hover {
+.hobby-card:hover {
     transform: scale(1.10);
 }
