--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -13,7 +13,7 @@
 
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
-                <div class="card p-3">
+                <div class="card p-3 hobby-card">
                     <div class="d-flex align-items-center justify-content-center">
                         <p class="card-text mb-0 me-3">Programming</p>
                         <i class="fa-solid fa-laptop-code" style="color: #1ad5c0;"></i>
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card p-3">
+                <div class="card p-3 hobby-card">
                     <div class="d-flex align-items-center justify-content-center">
                         <p class="card-text mb-0 me-3">Food</p>
                         <i class="fa-solid fa-utensils fa-bounce"></i>
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card p-3">
+                <div class="card p-3 hobby-card">
                     <div class="d-flex align-items-center justify-content-center">
                         <p class="card-text mb-0 me-3">Chess</p>
                         <i class="fa-solid fa-chess-board fa-xl"></i>
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card p-3">
+                <div class="card p-3 hobby-card">
                     <div class="d-flex align-items-center justify-content-center">
                         <p class="card-text mb-0 me-3">Gaming</p>
                         <i class="fa-solid fa-gamepad fa-shake" style="color: #c93c0d;"></i>
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card p-3">
+                <div class="card p-3 hobby-card">
                     <div class="d-flex align-items-center justify-content-center">
                         <p class="card-text mb-0 me-3">Traveling</p>
                         <i class="fa-solid fa-map-location-dot" style="color: #129728;"></i>
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card p-3">
+                <div class="card p-3 hobby-card">
                     <div class="d-flex align-items-center justify-content-center">
                         <p class="card-text mb-0 me-3">Anime</p>
                         <i class="fa-solid fa-eye" style="color: #0b53d0;"></i>
