--- a/src/main/resources/templates/fragments/home-page/jumbotron.html
+++ b/src/main/resources/templates/fragments/home-page/jumbotron.html
@@ -5,7 +5,7 @@
 <body>
 <div class="jumbotron jumbotron-fluid" th:fragment="jumbotron">
     <div class="container">
-        <h1 class="display-4">Hey, I'm Phi</h1>
+        <h1 class="display-4">Heya, I'm Phi</h1>
         <p class="lead" th:text=" 'I\'m a ' + ${details.age()} + ' year old software engineer with a love for programming. '
          + ${details.programmerPeriod().getYears()} + ' years ago, I started
          on my journey as a programmer. As of today, I\'ve been a professional software engineer for over ' + ${details.professionalProgrammerPeriod().getYears()}
