setup for skills

--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -17,6 +17,9 @@
             <div class="row md-6">
                 <div th:replace="~{fragments/home-page/hobbies :: hobbies}"></div>
             </div>
+            <div class="row md-6">
+                <div th:replace="~{fragments/home-page/skills :: skills}"></div>
+            </div>
         </div>
         <div class="col-md-6">
             <div th:replace="~{fragments/home-page/carousel :: carousel}"></div>
