implements / places skills on page

--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -18,7 +18,7 @@
                 <div th:replace="~{fragments/home-page/hobbies :: hobbies}"></div>
             </div>
             <div class="row md-6">
-                <div th:replace="~{fragments/home-page/skills :: skills}"></div>
+
             </div>
         </div>
         <div class="col-md-6">
@@ -28,8 +28,11 @@
         <div class="col-md-3">
             <div th:replace="~{fragments/home-page/certificates :: certificates}"></div>
         </div>
-        <div class="col-md-9 me-3">
+        <div class="col-md-6">
             <div th:replace="~{fragments/home-page/experience :: experience}"></div>
+        </div>
+        <div class="col-md-3">
+            <div th:replace="~{fragments/home-page/skills :: skills}"></div>
         </div>
     </div>
 </section>
