--- a/src/main/resources/templates/fragments/home-page/certificates.html
+++ b/src/main/resources/templates/fragments/home-page/certificates.html
@@ -7,7 +7,7 @@
 <body>
 <div class="container mt-4 border rounded p-4" th:fragment="certificates">
     <div class="jumbotron text-center">
-        <h3 class="display-4">Certificates</h3>
+        <h3 class="display-4 my-header">Certificates</h3>
     </div>
     <div th:each="certificate : ${details.certificates}" class="row mb-3">
         <div class="card">
