--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -8,7 +8,7 @@
 <div th:fragment="hobbies">
     <div class="container my-5 border rounded p-4">
         <div class="jumbotron text-center">
-            <h3 class="display-4 hobbies-header">Hobbies</h3>
+            <h3 class="display-4 my-header">Hobbies</h3>
         </div>
 
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
