--- a/src/main/resources/templates/fragments/home-page/skills.html
+++ b/src/main/resources/templates/fragments/home-page/skills.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
@@ -6,7 +5,22 @@
 </head>
 
 <body>
-<div th:fragment="skills"></div>
+    <div class="container mt-4 border rounded p-4" th:fragment="skills">
+        <div class="jumbotron text-center">
+            <h3 class="display-4 my-header">Skills</h3>
+        </div>
+        <div th:each="skill : ${details.skills}" class="row mb-3">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title" style="color: #184ac9;" th:text="${skill.name}"></h5>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <p class="card-text"><strong>Level(test): </strong><span th:text="${skill.proficiency}"></span></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
