--- a/src/main/resources/templates/fragments/home-page/certificates.html
+++ b/src/main/resources/templates/fragments/home-page/certificates.html
@@ -5,14 +5,14 @@
 </head>
 
 <body>
-<div class="container mt-4 border rounded p-4" th:fragment="certificates">
+<div class="container mt-4 border rounded p-4 scheme-color-3" th:fragment="certificates">
     <div class="jumbotron text-center">
         <h3 class="display-4 my-header">Certificates</h3>
     </div>
     <div th:each="certificate : ${details.certificates}" class="row mb-3">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title" style="color: #184ac9;" th:text="${certificate.title}"></h5>
+                <h5 class="card-title section-two-card-title" th:text="${certificate.title}"></h5>
                 <p class="card-text"><strong>Institution: </strong><span th:text="${certificate.institution}"></span>
                 </p>
                 <p class="card-text"><strong>Acquisition Date: </strong> <span
