--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -6,7 +6,7 @@
 
 <body>
 <div th:fragment="hobbies">
-    <div class="container my-5 border rounded p-4" th:style="'background-color: white'">
+    <div class="container m-2 p-4 border border-dark rounded scheme-color-1    ">
         <div class="jumbotron text-center">
             <h3 class="display-4 my-header">Hobbies</h3>
         </div>
