--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -9,7 +9,7 @@
 
 <body>
 <section layout:fragment="content" data-bs-spy="scroll" data-bs-target="#my-navbar" data-bs-smooth-scroll="true">
-    <div class="row scheme-color-1" id="home">
+    <div class="row scheme-color-1" id="about-me">
         <div class="col-md-6">
             <div class="row md-4">
                 <div th:replace="~{fragments/home-page/jumbotron :: jumbotron}"></div>
