--- a/src/main/resources/templates/fragments/general/navbar.html
+++ b/src/main/resources/templates/fragments/general/navbar.html
@@ -10,7 +10,7 @@
         <div class="navbar-collapse collapse flex-grow-1 justify-content-center">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="#home">Home</a>
+                    <a class="nav-link" href="#about-me">About me</a>
 
                 <li class="nav-item px-2">
                     <a class="nav-link" href="#cv">CV</a>
