setup for timeline

--- a/src/main/resources/templates/fragments/home-page/experience.html
+++ b/src/main/resources/templates/fragments/home-page/experience.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head>
-</head>
+<head></head>
 
 <body>
-<div th:fragment="experience"></div>
+<section class="py-5" th:fragment="experience">
+    <ul class="timeline">
+        <li class="timeline-item mb-5">
+            <h5 class="fw-bold">Title</h5>
+            <p class="mb-2 fw-bold">11 March 2020</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                necessitatibus adipisci, ad alias, voluptate pariatur officia
+                repellendus repellat inventore fugit perferendis totam dolor
+                voluptas et corrupti distinctio maxime corporis optio?
+            </p>
+        </li>
+    </ul>
+</section>
 </body>
 
 </html>
