setup for timeline & fixes security test

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -51,27 +51,31 @@
     background-color: #4E6E8C;
 }
 /*timeline*/
-.timeline {
+.timeline-with-icons {
     border-left: 1px solid hsl(0, 0%, 90%);
     position: relative;
     list-style: none;
 }
 
-.timeline .timeline-item {
+.timeline-with-icons .timeline-item {
     position: relative;
 }
 
-.timeline .timeline-item:after {
+.timeline-with-icons .timeline-item:after {
     position: absolute;
     display: block;
     top: 0;
 }
 
-.timeline .timeline-item:after {
-    background-color: hsl(0, 0%, 90%);
-    left: -38px;
+.timeline-with-icons .timeline-icon {
+    position: absolute;
+    left: -48px;
+    background-color: hsl(217, 88.2%, 90%);
+    color: hsl(217, 88.8%, 35.1%);
     border-radius: 50%;
-    height: 11px;
-    width: 11px;
-    content: "";
+    height: 31px;
+    width: 31px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
