--- a/src/main/resources/templates/fragments/home-page/timeline.html
+++ b/src/main/resources/templates/fragments/home-page/timeline.html
@@ -3,9 +3,14 @@
 <head></head>
 
 <body>
-<section class="py-5" th:fragment="experience">
-    <ul class="timeline">
+<!-- Section: Timeline -->
+<section class="py-5" th:fragment="timeline">
+    <ul class="timeline-with-icons">
         <li class="timeline-item mb-5">
+            <span class="timeline-icon">
+                <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+            </span>
+
             <h5 class="fw-bold">Title</h5>
             <p class="mb-2 fw-bold">11 March 2020</p>
             <p>
@@ -17,6 +22,7 @@
         </li>
     </ul>
 </section>
+<!-- Section: Timeline -->
 </body>
 
 </html>
