--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -30,7 +30,7 @@
             <div th:replace="~{fragments/home-page/certificates :: certificates}"></div>
         </div>
         <div class="col-md-6">
-            <div th:replace="~{fragments/home-page/experience :: experience}"></div>
+            <div th:replace="~{fragments/home-page/timeline :: timeline}"></div>
         </div>
         <div class="col-md-3">
             <div th:replace="~{fragments/home-page/skills :: skills}"></div>
