--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -26,6 +26,7 @@
         </div>
     </div>
     <div class="row scheme-color-2" id="cv">
+        <!--TODO: FIX TE DRUK-->
         <div class="col-md-3">
             <div th:replace="~{fragments/home-page/certificates :: certificates}"></div>
         </div>
