--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -22,13 +22,13 @@
             <div th:replace="~{fragments/home-page/carousel :: carousel}"></div>
         </div>
     </div>
-    <div class="row scheme-color-2" id="cv">
+    <div class="row scheme-color-2" id="experience">
         <div class="col-md-12">
             <div th:replace="~{fragments/home-page/timeline :: timeline}"></div>
         </div>
     </div>
 
-    <div class="row scheme-color-2" id="test">
+    <div class="row scheme-color-4" id="skills">
         <div class="col-md-6">
             <div th:replace="~{fragments/home-page/certificates :: certificates}"></div>
         </div>
