--- a/src/main/resources/templates/fragments/general/navbar.html
+++ b/src/main/resources/templates/fragments/general/navbar.html
@@ -13,7 +13,10 @@
                     <a class="nav-link" href="#about-me">About me</a>
 
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="#cv">CV</a>
+                    <a class="nav-link" href="#experience">Experience</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item px-2">
                     <a class="nav-link" th:href="@{/about}">About</a>
