--- a/src/main/resources/templates/fragments/home-page/timeline.html
+++ b/src/main/resources/templates/fragments/home-page/timeline.html
@@ -8,10 +8,10 @@
         <h2 class="display-4 my-header text-light">Work history</h2>
     </div>
     <ul class="timeline-with-icons">
-        <li class="timeline-item pb-3 mb-0" th:each="event : ${details.events}">
+        <li class="timeline-item pb-3 mb-0 " th:each="event : ${details.events}">
             <span class="timeline-icon"><i th:classappend="${event.icon.classes}"
                                            th:style="${event.icon.style}"></i></span>
-            <div class="card">
+            <div class="card scheme-color-3">
                 <div class="card-body">
                     <h5 class="card-title" th:text="${event.jobTitle}"></h5>
                     <strong class="card-text">Employer: </strong><span th:text="${event.employer}"></span>
