column spacing skills

--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -29,12 +29,14 @@
     </div>
 
     <div class="row scheme-color-4" id="skills">
-        <div class="col-md-6">
+        <div class="col-md-1"></div>
+        <div class="col-md-5">
             <div th:replace="~{fragments/home-page/certificates :: certificates}"></div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-5">
             <div th:replace="~{fragments/home-page/skills :: skills}"></div>
         </div>
+        <div class="col-md-1"></div>
     </div>
 </section>
 </body>
