--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -10,33 +10,33 @@
 <body>
 <section layout:fragment="content" data-bs-spy="scroll" data-bs-target="#my-navbar" data-bs-smooth-scroll="true">
     <div class="row scheme-color-1" id="about-me">
-        <div class="col-md-6">
-            <div class="row md-6">
+        <div class="col-6">
+            <div class="row-6">
                 <div th:replace="~{fragments/home-page/jumbotron :: jumbotron}"></div>
             </div>
-            <div class="row md-6">
+            <div class="row-6">
                 <div th:replace="~{fragments/home-page/hobbies :: hobbies}"></div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-6">
             <div th:replace="~{fragments/home-page/carousel :: carousel}"></div>
         </div>
     </div>
     <div class="row scheme-color-2" id="experience">
-        <div class="col-md-12">
+        <div class="col-12">
             <div th:replace="~{fragments/home-page/timeline :: timeline}"></div>
         </div>
     </div>
 
     <div class="row scheme-color-4" id="skills">
-        <div class="col-md-1"></div>
-        <div class="col-md-5">
+        <div class="col-1"></div>
+        <div class="col-5">
             <div th:replace="~{fragments/home-page/certificates :: certificates}"></div>
         </div>
-        <div class="col-md-5">
+        <div class="col-5">
             <div th:replace="~{fragments/home-page/skills :: skills}"></div>
         </div>
-        <div class="col-md-1"></div>
+        <div class="col-1"></div>
     </div>
 </section>
 </body>
