Changes frontend hobby

--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -47,8 +47,8 @@
             <div class="col">
                 <div class="card p-3 hobby-card">
                     <div class="d-flex align-items-center justify-content-center">
-                        <p class="card-text mb-0 me-3">Traveling</p>
-                        <i class="fa-solid fa-map-location-dot" style="color: #129728;"></i>
+                        <p class="card-text mb-0 me-3">Cooking</p>
+                        <i class="fa-solid fa-kitchen-set" style="color: #636fab;"></i>
                     </div>
                 </div>
             </div>
