--- a/src/main/resources/templates/fragments/home-page/jumbotron.html
+++ b/src/main/resources/templates/fragments/home-page/jumbotron.html
@@ -6,12 +6,18 @@
 <div class="jumbotron jumbotron-fluid" th:fragment="jumbotron">
     <div class="container">
         <h1 class="display-4">Hey, I'm Phi</h1>
-        <p class="lead" th:text=" 'I\'m a ' + ${details.age()} + ' year old software engineer with a love for programming. '
-         + ${details.programmerPeriod().getYears()} + ' years ago, I started
-         on my journey as a programmer. As of today, I\'ve been a professional software engineer for over ' + ${details.professionalProgrammerPeriod().getYears()}
-         + ' years and ' + ${details.professionalProgrammerPeriod().getMonths()} + ' months. Ambition is my drive and I\'m always
-           eager to learn more about my profession. After work or on a weekend day you\'ll find
-         me indulging some of my hobbies listed below.'"> </p>
+        <p class="lead" th:text="'Thanks for dropping by, I\'m Phi, your friendly neighborhood software engineer! ' +
+            'At the ripe age of ' + ${details.age()} + ', I embarked on my coding adventure. ' +
+            'It\'s been ' + ${details.programmerPeriod().getYears()} + ' years since I first danced with curly braces, ' +
+            'ever since, I\'ve eaten my fair share of segmentation faults and runtime exceptions. ' +
+            'I\'ve been coding professionally for over ' + ${details.professionalProgrammerPeriod().getYears()} +
+            ' years and ' + ${details.professionalProgrammerPeriod().getMonths()} + ' months now. ' +
+            'My ambition is sharper than my favorite chess lines – I\'m always up for a challenge. ' +
+            'After work, you can catch me wearing multiple hats; not just the coding kind. ' +
+            'I\'m a foodie exploring the gastronomic wonders of the world, a (board)game enthusiast always down for one more game, ' +
+            'a chess amateur gambit\'ing away, and a globe-trotter seeking Wi-Fi signals wherever I go. ' +
+            'This website is an up-to-date showcases of my career thus far, have a look around :)'">
+        </p>
 
     </div>
 </div>
