--- a/src/main/resources/templates/fragments/home-page/jumbotron.html
+++ b/src/main/resources/templates/fragments/home-page/jumbotron.html
@@ -10,15 +10,14 @@
             'At the ripe age of ' + ${details.age()} + ', I embarked on my coding adventure. ' +
             'It\'s been ' + ${details.programmerPeriod().getYears()} + ' years since I first danced with curly braces, ' +
             'ever since, I\'ve eaten my fair share of segmentation faults and runtime exceptions. ' +
-            'I\'ve been coding professionally for over ' + ${details.professionalProgrammerPeriod().getYears()} +
+            'I\'ve been programming professionally for over ' + ${details.professionalProgrammerPeriod().getYears()} +
             ' years and ' + ${details.professionalProgrammerPeriod().getMonths()} + ' months now. ' +
-            'My ambition is sharper than my favorite chess lines – I\'m always up for a challenge. ' +
+            'My ambitions are sharper than my favorite chess lines – I\'m always up for a challenge. ' +
             'After work, you can catch me wearing multiple hats; not just the coding kind. ' +
             'I\'m a foodie exploring the gastronomic wonders of the world, a (board)game enthusiast always down for one more game, ' +
             'a chess amateur gambit\'ing away, and a globe-trotter seeking Wi-Fi signals wherever I go. ' +
             'This website is an up-to-date showcases of my career thus far, have a look around :)'">
         </p>
-
     </div>
 </div>
 </body>
