--- a/src/main/resources/templates/fragments/home-page/certificates.html
+++ b/src/main/resources/templates/fragments/home-page/certificates.html
@@ -9,13 +9,14 @@
     <div class="jumbotron text-center">
         <h3 class="display-4 my-header">Certificates</h3>
     </div>
-    <div th:each="certificate : ${details.certificates}" class="row mb-3">
+    <div th:each="certificate : ${details.certificates}" class="row mb-3 formal-font">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title section-two-card-title" th:text="${certificate.title}"></h5>
                 <strong class="card-text">Institution: </strong><span th:text="${certificate.institution}"></span>
                 <br>
-                <strong class="card-text">Acquisition Date: </strong> <span th:text="${certificate.formattedAcquisitionDate()}"></span>
+                <strong class="card-text">Acquisition Date: </strong> <span
+                    th:text="${certificate.formattedAcquisitionDate()}"></span>
             </div>
         </div>
     </div>
